--- a/src/styles/Button.css
+++ b/src/styles/Button.css
@@ -7,6 +7,7 @@
 
 .icon-container > i{
     font-size: clamp(10px, 2vw, 16px);
+    color: var(--app-color-white);
 }
 
 .text-container{
@@ -17,6 +18,7 @@
     justify-content: center;
     font-size: clamp(10px, 2vw, 16px);
     text-align: center;
+    color: var(--app-color-white);
 }
 
 .btn-default{
