--- a/src/styles/NoPage.css
+++ b/src/styles/NoPage.css
@@ -36,6 +36,7 @@ svg {
     flex-direction: column;
     align-items: center;
     font-size: clamp(10px, 2vw, 16px);
+    color: var(--app-color-black);
 }
 
 .container-text-small > h1 {
@@ -88,6 +89,7 @@ svg {
     flex-direction: column;
     align-items: center;
     font-size: clamp(10px, 2vw, 16px);
+    color: var(--app-color-black);
 }
 
 .container-text-mind > h1 {
@@ -147,6 +149,7 @@ svg {
     align-items: center;
     font-size: clamp(10px, 2vw, 16px);
     margin-left: clamp(20px, 5vw, 40px);
+    color: var(--app-color-black);
 }
 
 .container-text-large > h1 {
@@ -206,6 +209,7 @@ svg {
     align-items: center;
     font-size: clamp(10px, 4vw, 30px);
     margin-left: clamp(20px, 5vw, 40px);
+    color: var(--app-color-black);
 }
 
 .container-text-extra-large > h1 {
